--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,6 @@
-#root, .wrapper {
+#root, #wrapper {
   height: 100%;
+  width: 100%;
 }
 
 .flex {
@@ -17,10 +18,10 @@
 .flex--wrap {
   flex-wrap: wrap; }
 
-body, html {
+html, body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   font-family: 'Raleway', sans-serif;
   font-weight: 400; }
@@ -29,10 +30,6 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none; }
-
-#wrapper {
-  height: 100%;
-  width: 100%; }
 
 .closed {
   display: none; }
@@ -119,7 +116,7 @@ header {
     background-size: cover;
     background-position: center;
     background-color: pink;
-    max-height: 50%;
+    height: 250px;
     flex-grow: 1;
     min-width: 30%;
     position: relative; }
