--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,19 @@
   width: 100%;
 }
 
+.spinner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  height: 100%;
+  flex-direction: column;
+}
+
+.spinner span {
+  margin-top: 20px;
+}
+
 .flex {
   display: flex; }
 
@@ -49,17 +62,23 @@ header {
     cursor: pointer; }
   #sidebar_nav span {
     font-size: 0.5em; }
-  #sidebar_nav ul li a {
+  #sidebar_nav ul li span {
     color: white;
     text-decoration: none;
     font-size: 0.5em;
     opacity: 0.5;
     transition: opacity 0.2s ease-in-out; }
-    #sidebar_nav ul li a:hover {
+    #sidebar_nav ul li span:hover {
       text-decoration: underline;
+      cursor: pointer;
       opacity: 1; }
   #sidebar_nav #sidebar_links {
     text-align: right; }
+
+.active {
+  opacity: 1 !important;
+  text-decoration: underline !important;
+}
 
 #reddit_options h1 {
   text-align: center;
@@ -82,13 +101,14 @@ header {
       margin-right: 0px; }
     #reddit_options ul li:first-child {
       margin-left: 0px; }
-    #reddit_options ul li a {
+    #reddit_options ul li span {
       color: white;
       text-decoration: none;
       opacity: 0.5;
       transition: opacity 0.2s ease-in-out; }
-      #reddit_options ul li a:hover {
+      #reddit_options ul li span:hover {
         text-decoration: underline;
+        cursor: pointer;
         opacity: 1;
         transition: opacity 0.2s ease-in-out; }
 
@@ -101,13 +121,14 @@ header {
     #reddit_sort_options ul li {
       margin-bottom: 10px;
       letter-spacing: 2px; }
-      #reddit_sort_options ul li a {
+      #reddit_sort_options ul li span {
         color: white;
         text-decoration: none;
         opacity: 0.5;
         transition: opacity 0.2s ease-in-out; }
-        #reddit_sort_options ul li a:hover {
+        #reddit_sort_options ul li span:hover {
           text-decoration: underline;
+          cursor: pointer;
           opacity: 1; }
 
 #section--gallery {
