--- a/src/app.css
+++ b/src/app.css
@@ -22,6 +22,14 @@
 .flex--space-between {
   justify-content: space-between; }
 
+.flex--center {
+  justify-content: center;
+}
+
+.centerdiv {
+  margin: 0 auto;
+}
+
 .flex--align-center {
   align-items: center; }
 
