--- a/public/app.css
+++ b/public/app.css
@@ -1,3 +1,14 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  background-color: #023047;
+  color: #FFB703;
+}
+
 #root, #wrapper {
   height: 100%;
   width: 100%;
@@ -8,7 +19,6 @@
 }
 
 .fullScreen {
-  color: white;
   font-size: 40px;
   position: fixed;
   top: 3%;
@@ -21,23 +31,24 @@
   border: 2px solid white;
   border-radius: 5px;
   z-index: 11;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.fullScreen i {
+.fullScreen .fullScreen--close {
   padding: 15px 20px 0 0;
-}
-
-.fullScreen i:hover {
   cursor: pointer;
+  align-self: flex-end;
 }
 
 .spinner {
   display: flex;
   align-items: center;
-  justify-content: center;
   font-size: 30px;
-  height: 100%;
   flex-direction: column;
+  color: white;
+  margin-top: 50px;
 }
 
 .spinner span {
@@ -45,7 +56,8 @@
 }
 
 .flex {
-  display: flex; }
+  display: flex;
+}
 
 .flex--space-between {
   justify-content: space-between; }
@@ -58,162 +70,183 @@
   margin: 0 auto;
 }
 
+.no_images {
+  color: white;
+}
+
 .flex--align-center {
-  align-items: center; }
+  align-items: center;
+}
 
 .flex--align-top {
-  align-items: flex-start; }
+  align-items: flex-start;
+}
 
 .flex--wrap {
-  flex-wrap: wrap; }
-
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400; }
+  flex-wrap: wrap;
+}
 
 ul {
   margin: 0;
   padding: 0;
-  list-style: none; }
-
-.closed {
-  display: none; }
-
-.opened {
-  display: block; }
+  list-style: none;
+}
 
 header {
-  height: 30%;
-  background-color: #475977;
-  padding: 30px 50px; }
+  background-color: #219EBC;
+  padding: 30px 50px;
+  color: #023047;
+}
 
 #sidebar_nav {
-  color: white;
-  font-size: 30px; }
-  #sidebar_nav:hover {
-    cursor: pointer; }
-  #sidebar_nav span {
-    font-size: 0.5em; }
-  #sidebar_nav ul li span {
-    color: white;
-    text-decoration: none;
-    font-size: 0.5em;
-    opacity: 0.5;
-    transition: opacity 0.2s ease-in-out; }
-    #sidebar_nav ul li span:hover {
-      text-decoration: underline;
-      cursor: pointer;
-      opacity: 1; }
-  #sidebar_nav #sidebar_links {
-    text-align: right; }
+  font-size: 30px;
+}
 
-.active {
-  opacity: 1 !important;
-  text-decoration: underline !important;
+#sidebar_nav:hover {
+  cursor: pointer;
+}
+
+#sidebar_nav span {
+  font-size: 0.5em;
+}
+#sidebar_nav ul li span {
+  text-decoration: none;
+  font-size: 0.5em;
+  opacity: 0.5;
+  transition: opacity 0.2s ease-in-out;
+}
+
+#sidebar_nav ul li span:hover {
+  text-decoration: underline;
+  cursor: pointer;
+  opacity: 1;
+}
+
+#sidebar_nav #sidebar_links {
+  text-align: right;
 }
 
 #reddit_options h1 {
   text-align: center;
   text-transform: uppercase;
-  color: white;
   font-size: 45px;
   letter-spacing: 2px;
-  font-weight: 300; }
+  font-weight: 300;
+}
+
 #reddit_options ul {
   text-transform: uppercase;
-  text-align: center; }
-  #reddit_options ul li {
-    color: white;
+  text-align: center;
+}
+
+#reddit_options ul li {
     font-weight: 100;
     display: inline;
     margin: 0px 7px;
     font-size: 12px;
-    letter-spacing: 1px; }
-    #reddit_options ul li:last-child {
-      margin-right: 0px; }
-    #reddit_options ul li:first-child {
-      margin-left: 0px; }
-    #reddit_options ul li span {
-      color: white;
-      text-decoration: none;
-      opacity: 0.5;
-      transition: opacity 0.2s ease-in-out; }
-      #reddit_options ul li span:hover {
-        text-decoration: underline;
-        cursor: pointer;
-        opacity: 1;
-        transition: opacity 0.2s ease-in-out; }
+    letter-spacing: 1px;
+}
+
+#reddit_options ul li:last-child {
+  margin-right: 0px;
+}
+
+#reddit_options ul li:first-child {
+  margin-left: 0px;
+}
+
+#reddit_options ul li span {
+  text-decoration: none;
+  opacity: 0.5;
+  transition: opacity 0.2s ease-in-out;
+}
+
+#reddit_options ul li span:hover {
+  text-decoration: underline;
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity 0.2s ease-in-out;
+}
 
 #reddit_sort_options {
   font-size: 30px;
-  align-self: flex-end; }
-  #reddit_sort_options ul {
-    font-size: 0.35em;
-    text-transform: uppercase; }
-    #reddit_sort_options ul li {
-      margin-bottom: 10px;
-      letter-spacing: 2px; }
-      #reddit_sort_options ul li span {
-        color: white;
-        text-decoration: none;
-        opacity: 0.5;
-        transition: opacity 0.2s ease-in-out; }
-        #reddit_sort_options ul li span:hover {
-          text-decoration: underline;
-          cursor: pointer;
-          opacity: 1; }
+  align-self: flex-end;
+}
+
+#reddit_sort_options ul {
+  font-size: 0.35em;
+  text-transform: uppercase;
+}
+
+#reddit_sort_options ul li {
+  margin-bottom: 10px;
+  letter-spacing: 2px;
+}
+
+#reddit_sort_options ul li span {
+  text-decoration: none;
+  opacity: 0.5;
+  transition: opacity 0.2s ease-in-out;
+}
+
+#reddit_sort_options ul li span:hover {
+  text-decoration: underline;
+  cursor: pointer;
+  opacity: 1;
+}
 
 #section--gallery {
-  height: 100%; }
-  #section--gallery .reddit_image {
-    background-size: cover;
-    background-position: center;
-    background-color: pink;
-    height: 250px;
-    flex-grow: 1;
-    min-width: 30%;
-    position: relative; }
-    #section--gallery .reddit_image:hover {
-      cursor: pointer; }
-    #section--gallery .reddit_image .hover-state {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      left: 0;
-      background-color: #4A7B9D;
-      opacity: 0.9; }
-      #section--gallery .reddit_image .hover-state #image_description {
-        text-align: right;
-        margin-right: 30px;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        color: white;
-        font-size: 15px; }
-        #section--gallery .reddit_image .hover-state #image_description p:nth-child(2) {
-          font-size: 12px; }
-        #section--gallery .reddit_image .hover-state #image_description p:nth-child(3) {
-          font-size: 12px; }
-  @media (max-width: 360px) {
-    #section--gallery {
-      flex-direction: column; } }
+  justify-content: center;
+}
 
-footer {
-  height: 180px;
-  background-color: #475977;
+#section--gallery .reddit_image {
+  background-size: cover;
+  background-position: center;
+  width: 20%;
+  height: 250px;
+  object-fit: cover;
+  vertical-align: bottom;
+  position: relative;
+}
+
+#section--gallery .reddit_image:hover {
+  cursor: pointer;
+  opacity: 0.2;
+  transition: opacity 0.08s ease-in-out;
+}
+
+.image_description {
   display: flex;
-  flex-direction: row-reverse; }
-
-#footer_copywrite {
-  align-self: center;
-  margin-right: 20px;
+  font-size: 12px;
+  padding-left: 30px;
+  background-color: #023047;
   color: white;
-  font-size: 25px;
-  letter-spacing: 1px;
-  text-align: right; }
-  #footer_copywrite p {
-    font-size: 0.4em; }
+  justify-content: end;
+}
+
+.image_description p {
+  margin-right: 30px;
+}
+
+.gallery_pagination {
+  padding: 20px 20px;
+  display: flex;
+}
+
+.gallery_pagination--prev {
+  margin-right: auto;
+}
+
+.gallery_pagination--next {
+  margin-left: auto;
+}
+
+.gallery_pagination i {
+  color: white;
+}
+
+.gallery_pagination i:hover {
+  cursor: pointer;
+  color: #219EBC;
+  transition: color 0.2s ease-in-out;
+}
